Jetpack Cloud: fix overlapping button styles (#90659)

--- a/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-content/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-content/style.scss
@@ -117,12 +117,6 @@
 	}
 }
 
-.button .gridicon {
-	color: var(--color-neutral-80);
-	width: 24px;
-	height: 24px;
-}
-
 .select-dropdown__item-text {
 	text-align: start;
 }
